--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "useragent": "^2.1.12",
     "usertiming": "^0.1.8",
     "web-animations-js": "^2.2.5",
-    "whatwg-fetch": "^2.0.3",
+    "whatwg-fetch": "2.0.3",
     "yaku": "0.17.11"
   },
   "devDependencies": {
