--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "handlebars": "^4.0.6",
     "html5shiv": "^3.7.3",
     "intersection-observer": "^0.4.1",
-    "intl": "^1.2.5",
+    "intl": "1.2.5",
     "js-polyfills": "^0.1.40",
     "json3": "^3.3.2",
     "lazystream": "^1.0.0",
