--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "uglify-js": "^2.7.5",
     "useragent": "^2.1.12",
     "usertiming": "^0.1.8",
-    "web-animations-js": "^2.2.5",
+    "web-animations-js": "2.2.5",
     "whatwg-fetch": "2.0.3",
     "yaku": "0.17.11"
   },
