--- a/package.json
+++ b/package.json
@@ -40,48 +40,48 @@
     "node": ">=8"
   },
   "dependencies": {
-    "Base64": "^1.0.0",
-    "array.of": "^0.1.1",
-    "audio-context-polyfill": "^1.0.0",
-    "babel-core": "^6.23.1",
-    "babel-preset-es2015": "^6.1.18",
-    "denodeify": "^1.2.1",
+    "Base64": "1.0.1",
+    "array.of": "0.1.1",
+    "audio-context-polyfill": "1.0.0",
+    "babel-core": "6.25.0",
+    "babel-preset-es2015": "6.24.1",
+    "denodeify": "1.2.1",
     "diff": "1.4.0",
-    "event-source-polyfill": "^0.0.9",
+    "event-source-polyfill": "0.0.9",
     "exists-sync": "0.0.4",
-    "from2-string": "^1.1.0",
-    "glob": "^7.1.1",
-    "graceful-fs": "^4.1.10",
-    "handlebars": "^4.0.6",
-    "html5shiv": "^3.7.3",
-    "intersection-observer": "^0.4.1",
+    "from2-string": "1.1.0",
+    "glob": "7.1.2",
+    "graceful-fs": "4.1.11",
+    "handlebars": "4.0.10",
+    "html5shiv": "3.7.3",
+    "intersection-observer": "0.4.1",
     "intl": "1.2.5",
-    "js-polyfills": "^0.1.40",
-    "json3": "^3.3.2",
-    "lazystream": "^1.0.0",
-    "lodash": "^4.17.4",
-    "lru-cache": "^4.1.1",
-    "merge2": "^1.0.3",
-    "mkdirp": "^0.5.0",
+    "js-polyfills": "0.1.40",
+    "json3": "3.3.2",
+    "lazystream": "1.0.0",
+    "lodash": "4.17.4",
+    "lru-cache": "4.1.1",
+    "merge2": "1.0.3",
+    "mkdirp": "0.5.1",
     "mutationobserver-shim": "^0.3.2",
-    "picturefill": "^3.0.1",
-    "rimraf": "^2.6.2",
-    "semver": "^5.3.0",
-    "shuffle-array": "^1.0.1",
-    "stream-from-promise": "^1.0.0",
-    "stream-to-string": "^1.1.0",
+    "picturefill": "3.0.2",
+    "rimraf": "2.6.1",
+    "semver": "5.3.0",
+    "shuffle-array": "1.0.1",
+    "stream-from-promise": "1.0.0",
+    "stream-to-string": "1.1.0",
     "string.fromcodepoint": "0.2.1",
     "tsort": "0.0.1",
-    "uglify-js": "^2.7.5",
-    "useragent": "^2.1.12",
-    "usertiming": "^0.1.8",
+    "uglify-js": "2.8.29",
+    "useragent": "2.1.13",
+    "usertiming": "0.1.8",
     "web-animations-js": "2.2.5",
     "whatwg-fetch": "2.0.3",
     "yaku": "0.17.11"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0",
-    "eslint": "^4.9.0",
+    "dotenv": "4.0.0",
+    "eslint": "4.9.0",
     "execa": "^1.0.0",
     "globby": "^8.0.1",
     "karma": "~3.0.0",
@@ -89,12 +89,12 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-summary-optional-console-reporter": "^1.6.1",
-    "mocha": "^3.5.3",
-    "mockery": "^1.7.0",
-    "nyc": "^10.0.0",
-    "proclaim": "^3.6.0",
-    "sinon": "^4.0.1",
-    "supertest": "^3.0.0",
+    "mocha": "3.5.3",
+    "mockery": "1.7.0",
+    "nyc": "10.3.2",
+    "proclaim": "3.5.0",
+    "sinon": "4.0.1",
+    "supertest": "3.0.0",
     "yaml": "^1.1.0"
   }
 }
