--- a/polyfills/Number/parseInt/config.json
+++ b/polyfills/Number/parseInt/config.json
@@ -20,7 +20,8 @@
 		"bb": "*"
 	},
 	"dependencies": [
-		"_ESAbstract.CreateMethodProperty"
+		"_ESAbstract.CreateMethodProperty",
+		"String.prototype.trim"
 	],
 	"license": "MIT",
 	"spec": "http://www.ecma-international.org/ecma-262/6.0/#sec-parseint-string-radix",
